--- a/views/register_baby.html
+++ b/views/register_baby.html
@@ -114,7 +114,7 @@
 
     <div id="babyList"></div>
 
-    <!-- <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <script src="script.js"></script> -->
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
