--- a/views/register_baby.pug
+++ b/views/register_baby.pug
@@ -6,7 +6,7 @@ head
   link(rel='stylesheet' href='/css/style.css')
 h1 Babies Registration Form
 .container
-  form#babiesForm(action = "/registerbaby" method="POST")
+  form#babiesForm(action = "/registerparent" method="POST")
     .form-group
       label(for='name') Babies Name:
       input#name(type='text' placeholder='Babies Name' name='name')
