--- a/views/parent.pug
+++ b/views/parent.pug
@@ -1,5 +1,4 @@
 doctype html
-| PASTE YOUR HTML CODE HERE
 head
   meta(charset='UTF-8')
   meta(name='viewport' content='width=device-width, initial-scale=1.0')
@@ -9,17 +8,17 @@ head
 .container
   form#parentDetailsForm(action = "/registerparent" method="POST")
     h2 Parent Details
-    input#parentName(type='text' name='parentName' placeholder='Parent Name' name="parentName")
-    input#parentAge(type='number' name='parentAge' placeholder='Parent Age' name="parentAge")
-    select#parentSex(name='parentSex' name="parentSex")
+    input#parentName(type='text' name='parentName' placeholder='Parent Name' )
+    input#parentAge(type='number' name='parentAge' placeholder='Parent Age' )
+    select#parentSex(name='parentSex')
       option(value='') Select Sex
       option(value='male') Male
       option(value='female') Female
       option(value='other') Other
-    input#parentLocation(type='text' name='parentLocation' placeholder='Location' name="parentLocation")
-    input#parentNIN(type='text' name='parentNIN' placeholder='National Identification Number (NIN)' name="parentNIN")
-    input#parentContact(type='tel' name='parentContact' placeholder='Contact Number' name="parentContact")
-    input#emergencyContact(type='tel' name='emergencyContact' placeholder='Emergency Contact' name="emergencyContact")
+    input#parentLocation(type='text' name='parentLocation' placeholder='Location' )
+    input#parentNIN(type='text' name='parentNIN' placeholder='National Identification Number (NIN)' )
+    input#parentContact(type='tel' name='parentContact' placeholder='Contact Number' )
+    input#emergencyContact(type='tel' name='emergencyContact' placeholder='Emergency Contact' )
     input(type='submit' value='Submit')
-<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <script src="/js/parent.js"></script>  
+//- <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+//-     <script src="/js/parent.js"></script>  
