add files and changes

--- a/views/register-sitter.pug
+++ b/views/register-sitter.pug
@@ -6,6 +6,14 @@ head
   title Daycare Management System
   link(rel='stylesheet' href='/css/style.css')
 h1 Sitters Registration Form
+<nav>
+      <ul>
+        <li>
+          <a (href="/logoutl")>logout</a>
+        </li>
+       
+      </ul>
+    </nav>
 .container
   form#sitterForm(action = "/registersitter" method="POST")
     .form-group
