--- a/views/register_baby.html
+++ b/views/register_baby.html
@@ -6,6 +6,16 @@
     <title>Daycare Management System</title>
     <link rel="stylesheet" href="style.css" />
   </head>
+  <header>
+    <nav>
+      <ul>
+        <li>
+          <a (href="/logoutl")>logout</a>
+        </li>
+       
+      </ul>
+    </nav>
+  </header>
 
   <body>
     <h1>Babies Registration Form</h1>
