--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -1,4 +1,4 @@
-body {
+/* body {
   font-family: Arial, sans-serif;
   background-color: #f4f4f4;
   margin: 0;
@@ -52,4 +52,46 @@ body {
       button:hover[type="submit"] {
         background-color: #45a049;
       }
-    
+     */
+
+     body {
+      font-family: Arial, sans-serif;
+  }
+  
+  .container {
+      max-width: 400px;
+      margin: 0 auto;
+      padding: 20px;
+      border: 1px solid #ccc;
+      border-radius: 5px;
+  }
+  
+  h2 {
+      text-align: center;
+  }
+  
+  form {
+      display: flex;
+      flex-direction: column;
+  }
+  
+  label {
+      margin-bottom: 5px;
+  }
+  
+  input, select {
+      margin-bottom: 10px;
+      padding: 8px;
+      border-radius: 5px;
+      border: 1px solid #ccc;
+  }
+  
+  button {
+      padding: 10px;
+      background-color: #007bff;
+      color: #fff;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+  }
+  
