--- a/public/css/sitter.css
+++ b/public/css/sitter.css
@@ -10,8 +10,15 @@ table {
   }
   
   th {
-    background-color: #f2f2f2;
+    background-color: #fa75dd;
     color: #333;
+    border-right: 1px solid #ddd;
+  }
+
+  td {
+    background-color: #f577c5;
+    color: #333;
+    border-right: 1px solid #ddd;
   }
   
   tbody tr:hover {
