--- a/views/log.pug
+++ b/views/log.pug
@@ -6,17 +6,17 @@ head
   link(rel='stylesheet' href='/css/log.css')
 .container
   h2 Login
-  form#loginForm(action="/login" method="post")
+  form#loginForm(action="/login" method="POST")
     .form-group
       label(for='username') Username:
-      input#username(type='text' required='')
+      input#username(type='text' required)
     .form-group
       label(for='email') Email:
-      input#email(type='email' required='')
+      input#email(type='email' required)
     .form-group
       label(for='password') Password:
-      input#password(type='password' required='')
+      input#password(type='password' required)
     .form-group
       button.btn(type='submit') Login
-script(src='https://unpkg.com/axios/dist/axios.min.js')
-script(src='/js/log.js')
+//- script(src='https://unpkg.com/axios/dist/axios.min.js')
+//- script(src='/js/log.js')
