--- a/views/babiesUpdate.pug
+++ b/views/babiesUpdate.pug
@@ -4,7 +4,7 @@ head
   meta(name='viewport' content='width=device-width, initial-scale=1.0')
   title Daycare Management System
   link(rel='stylesheet' href='/css/style.css')
-h1 Babies Registration Form
+h1 Babies Update Form
 .container
   form#babiesForm(action = "/babiesUpdate?id="+baby._id  method="POST")
     .form-group
