--- a/views/homepage.pug
+++ b/views/homepage.pug
@@ -11,18 +11,4 @@ head
     a(href='dashboard.html' onclick='showdashboardPage()') Dashboard
   #content
     // Content will be dynamically loaded here
-script.
-  function showSittersPage() {
-  document.getElementById('content').innerHTML = `<h3>Sitters Page</h3><p>Dummy data for sitters metrics can be displayed here.</p>`;
-  }
-  function showBabiesPage() {
-  document.getElementById('content').innerHTML = `<h3>Babies Page</h3><p>Dummy data for babies metrics can be displayed here.</p>`;
-  }
-  function showProcurementPage() {
-  document.getElementById('content').innerHTML = `<h3>Procurement Page</h3><p>Dummy data for procurement metrics can be displayed here.</p>`;
-  }
-  function showPaymentsPage() {
-  document.getElementById('content').innerHTML = `<h3>Payments Page</h3><p>Dummy data for payments metrics can be displayed here.</p>`;
-  }
-  // Show home page by default
-  showHomePage();
+ <script src="/js/home.js"></script> 
