--- a/public/css/style.css
+++ b/public/css/style.css
@@ -38,7 +38,7 @@ body {
   }
   
   button[type="submit"] {
-    background-color: #4caf50;
+    background-color: #8800C7;
     color: #fff;
     border: none;
     padding: 10px 20px;
@@ -47,6 +47,6 @@ body {
   }
   
   button[type="submit"]:hover {
-    background-color: #45a049;
+    background-color: #d175fc;
   }
   
