add all changes

--- a/views/babiesmanagement.pug
+++ b/views/babiesmanagement.pug
@@ -52,6 +52,6 @@ table
             td 
                 a(href="/babiesUpdate/"+ baby._id) Update
             td
-                 form(method="POST" action="/delete")
-                 input(type="hidden" name="id" value=baby._id)
-                 button(type="submit") Delete
+                 form(method="POST" action="/deletebaby")
+                  input(type="hidden" name="id" value=baby._id)
+                  button(type="submit") Delete
