--- a/views/index.pug
+++ b/views/index.pug
@@ -1,8 +1,8 @@
- meta(charset='UTF-8')
-  meta(name='viewport' content='width=device-width, initial-scale=1.0')
-  title Daystar Day-care
-  link(rel='stylesheet' href='/css/styles.css')
-  link(href='https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css' rel='stylesheet' integrity='sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC' crossorigin='anonymous')
+meta(charset='UTF-8')
+meta(name='viewport' content='width=device-width, initial-scale=1.0')
+title Daystar Day-care
+link(rel='stylesheet' href='/css/styles.css')
+link(href='https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css' rel='stylesheet' integrity='sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC' crossorigin='anonymous')
 // <div class="container">
 header
   header
@@ -39,7 +39,7 @@ header
               >Disabled</a
               >
               </li>
-          form.d-flex (action = "/daycare" method="POST)
+          form.d-flex 
             input.form-control.me-2(type='search' placeholder='Search' aria-label='Search')
             button.btn.btn-outline-success(type='submit')
               | Search
