--- a/views/dashboard.pug
+++ b/views/dashboard.pug
@@ -8,9 +8,10 @@ h1 Adimin dashboard
 .container
   ul
     li
-      a(href='babies.html') Add Baby
+      a(href='registerbaby') Add Baby
     li
-      a(href='sitters.html') Add Sitter
+    
+      a(href='registersitter') Add Sitter
     li
       a(href='payment.html') Add Payments
     li
