--- a/views/homepage.pug
+++ b/views/homepage.pug
@@ -3,12 +3,13 @@ head
   meta(charset='UTF-8')
   meta(name='viewport' content='width=device-width, initial-scale=1.0')
   title Document
-    link(rel='stylesheet' href='/css/home.css')
+  link(rel='stylesheet' href='/css/home.css')
 .container
   h1 WELCOME TO THE ADIMIN DASHBOARD
   h2 Daystar Day-care
   .menu
-    a(href='dashboard.html' onclick='showdashboardPage()') Dashboard
+    a(href='dashboard' onclick='showdashboardPage()') Dashboard
   #content
-    // Content will be dynamically loaded here
- <script src="/js/home.js"></script> 
+  // Content will be dynamically loaded here
+ 
+  <script src="/js/home.js"></script> 
