--- a/views/index.pug
+++ b/views/index.pug
@@ -14,15 +14,15 @@ header
         #navbarSupportedContent.collapse.navbar-collapse
           ul.navbar-nav.me-auto.mb-2.mb-lg-0
             li.nav-item
-              a.nav-link.active(aria-current='page' href='about-us.pug') About -us
+              a.nav-link.active(aria-current='page' href='aboutus') About -us
             li.nav-item
-              a.nav-link(href='review.pug') Review
+              a.nav-link(href='review') Review
             li.nav-item.dropdown
               a#navbarDropdown.nav-link.dropdown-toggle(href='#' role='button' data-bs-toggle='dropdown' aria-expanded='false')
                 | Welcome
               ul.dropdown-menu(aria-labelledby='navbarDropdown')
                 li
-                  a.dropdown-item(href='register-admin.pug') Adimin
+                  a.dropdown-item(href='registeradmin') Adimin
                 li
                   a.dropdown-item(href='sittersign.html') Sitter
                 li
