--- a/views/register-sitter.pug
+++ b/views/register-sitter.pug
@@ -13,13 +13,13 @@ h1 Sitters Registration Form
       input#name(type='text' placeholder='Sitter Name' name='name')
     .form-group
       label(for='age') Sitter Age:
-      input#age(type='number' placeholder='Sitter Age' name=' age')
+      input#age(type='number' placeholder='Sitter Age' name='age')
     .form-group
       label(for='location') Sitter Location:
-      input#location(type='text' placeholder='Sitter Location' name=' location')
+      input#location(type='text' placeholder='Sitter Location' name='location')
     .form-group
       label(for='dob') Sitter Date of Birth:
-      input#dob(type='date' placeholder='Sitter Date of Birth' name='dot')
+      input#dob(type='date' placeholder='Sitter Date of Birth' name='dob')
     .form-group
       label(for='gender') Sitter Gender:
       select#gender(name='gender')
