--- a/views/register_baby.pug
+++ b/views/register_baby.pug
@@ -47,7 +47,7 @@ h1 Babies Registration Form
       input#name(type='text' placeholder='Name of The Person taking the Baby' name='nameofpersontakingcare')
     .form-group
       label(for='time out') time out:
-      input#Time(type='number' placeholder='Time Out' name='TimeOut')
+      input#Time(type='time' placeholder='Time Out' name='TimeOut')
     button(type='submit') Add Baby
 #babyList
 
