--- a/views/welcome.pug
+++ b/views/welcome.pug
@@ -3,7 +3,7 @@ head
   meta(charset='UTF-8')
   meta(name='viewport' content='width=device-width, initial-scale=1.0')
   title Welcome Page
-  
+  link(rel='stylesheet' href='./css/wel.css')
 .container
   h1 Welcome!
   .icons
