--- a/views/dashboard.pug
+++ b/views/dashboard.pug
@@ -8,15 +8,16 @@ h1 Adimin dashboard
 .container
   ul
     li
-      a(href='registerbaby') Add Baby
+      a(href='babydashboard')  Baby
     li
-    
-      a(href='registersitter') Add Sitter
+      a(href='sitterdashboard')  Sitter
     li
-      a(href='payment.html') Add Payments
+      a(href='registerparent')  Parent
     li
-      a(href='procure.html') Add Items and Cost
+      a(href='payment') Add Payments
     li
-      a(href='checkin.html') checkin form
+      a(href='procure') Add Items and Cost
     li
-      a(href='quiz.html') Review
+      a(href='feedback') Feedback
+    li
+      a(href='review') Review
