--- a/views/index.pug
+++ b/views/index.pug
@@ -24,21 +24,12 @@ header
                 li
                   a.dropdown-item(href='registeradmin') Adimin
                 li
-                  a.dropdown-item(href='sittersign.html') Sitter
-                li
-                  hr.dropdown-divider
-                li
-                  a.dropdown-item(href='parentsign.html') Parents
-            //
-              <li class="nav-item">
-              <a
-              class="nav-link disabled"
-              href="#"
-              tabindex="-1"
-              aria-disabled="true"
-              >Disabled</a
-              >
-              </li>
+                //-   a.dropdown-item(href='feedback') Sitter
+                //- li
+                //-   hr.dropdown-divider
+                //- li
+                //-   a.dropdown-item(href='registerparent') Parents
+            
           form.d-flex 
             input.form-control.me-2(type='search' placeholder='Search' aria-label='Search')
             button.btn.btn-outline-success(type='submit')
