--- a/views/procure.pug
+++ b/views/procure.pug
@@ -3,13 +3,13 @@ head
   meta(charset='UTF-8')
   meta(name='viewport' content='width=device-width, initial-scale=1.0')
   title Procurement corner
- 
+  link(rel='stylesheet' href='/css/proc.css')
 .container
   h1 WELCOME TO THE PROCUREMENT CORNER
   h2 Daystar Day-care
   .menu
-    a(href='expence.html' onclick='showexpensepage()') expense
-    a(href='purchase.html' onclick='showpurchasepage()') dastar dolls
+    a(href='expence' onclick='showexpensepage()') expense
+    a(href='sell-item' onclick='showpurchasepage()') dastar dolls
   #content
     // Content will be dynamically loaded here
 script.
