--- a/views/renderSitterClockin.pug
+++ b/views/renderSitterClockin.pug
@@ -15,6 +15,7 @@ table
             th Gender
             th Number
             th Contacts
+            th Action
            
   tbody#sitter-list
        if sitters.length 
