--- a/views/babiesmanagement.pug
+++ b/views/babiesmanagement.pug
@@ -19,6 +19,7 @@ table
             th Parent Name
             th Fees
             th Period of stay
+            th Date of Payment
             th Number
             th Name of person taking care 
             th Time out
@@ -34,13 +35,14 @@ table
             td   #{baby.name} 
             td  #{baby.age }
             td  #{baby.Location} 
-            td  #{baby.dob} 
+            td  #{moment(baby.dob).format("DD-MM-YYYY")} 
             td  #{baby.gender} 
             td  #{baby.nextOfKin} 
             td  #{baby.timeofArrival} 
             td  #{baby.parentName} 
             td  #{baby.fees} 
             td  #{baby.periodofStay} 
+            td  #{baby.dob} 
             td  #{baby.babiesNumber} 
             td  #{baby.nameofpersontakingcare}
             td  #{baby.TimeOut} 
@@ -48,7 +50,7 @@ table
             td 
                 a(href="/babyClockin/"+ baby._id) Clockin
             td
-                button(onclick="clockout()") Clockout 
+                a(href="/babyClockout/"+ baby._id) Clockout 
             td 
                 a(href="/babiesUpdate/"+ baby._id) Update
             td
