--- a/views/payment.pug
+++ b/views/payment.pug
@@ -2,34 +2,36 @@ doctype html
 head
   meta(charset='UTF-8')
   meta(name='viewport' content='width=device-width, initial-scale=1.0')
-  title Time and Payments Table
-  
+  title Time and Payments Form
+  link(rel='stylesheet' href='/css/pay.css')
 .container
-  h2 Time and Payments
-  table#timePaymentsTable
-    thead
-      tr
-        th Date
-        th Time Worked
-        th Payment
-        th Action
-    tbody
-      // Rows will be dynamically added here
-  button.add-row-btn(onclick='addRow()') Add Row
-script.
-  function addRow() {
-  const table = document
-  .getElementById("timePaymentsTable")
-  .getElementsByTagName("tbody")[0];
-  const newRow = table.insertRow();
-  const cells = Array.from({ length: 4 }, () => newRow.insertCell());
-  cells[0].innerHTML = '<input type="date">';
-  cells[1].innerHTML = '<input type="text">';
-  cells[2].innerHTML = '<input type="number" step="0.01">';
-  cells[3].innerHTML =
-  '<button onclick="deleteRow(this)">Delete</button>';
-  }
-  function deleteRow(btn) {
-  const row = btn.parentNode.parentNode;
-  row.parentNode.removeChild(row);
-  }
+  h2 Time and Payments Form
+  form#paymentform(action='/payment' method='POST')
+    label(for='date') Date:
+    input#date(type='date' name='date' )
+    br
+    br
+    label(for='name') Name:
+    input#name(type='text' name='name' )
+    br
+    br
+    label(for='numberOfBabies') Number of Babies Attended:
+    select#numberOfBabies(name='numberOfBabies')
+      option(value='0') 0
+      option(value='1') 1
+      option(value='2') 2
+      option(value='3') 3
+      option(value='4') 4
+      option(value='5') 5
+      option(value='6') 6
+      option(value='7') 7
+      option(value='8') 8
+      option(value='9') 9
+      option(value='10') 10
+    label(for='totalPayment') Total Payment:
+    input#totalPayment(type='text', readonly='true')
+    br
+    br
+    button(type='submit') Submit
+
+    <script src="/js/pay.js"></script>   
