--- a/views/renderBabyClockout.pug
+++ b/views/renderBabyClockout.pug
@@ -5,7 +5,7 @@ head
   title Document
   link(rel='stylesheet' href='/css/sitter.css')
 
-h1 Clockedin Babies
+h1 Clockedout Babies
 table
   thead
           tr
