--- a/views/payment.pug
+++ b/views/payment.pug
@@ -29,7 +29,7 @@ head
       option(value='9') 9
       option(value='10') 10
     label(for='totalPayment') Total Payment:
-    input#totalPayment(type='text', readonly='true')
+    input#totalPayment(type='text', readonly='true' name="totalPayment")
     br
     br
     button(type='submit') Submit
