--- a/views/doll.pug
+++ b/views/doll.pug
@@ -6,7 +6,7 @@ head
   link(rel='stylesheet' href='/css/doll.css')
 
 .form-container
-  form#sellForm(action='/sell-item' method='POST')
+  form#sellForm(action='/sell-item' method='POST' enctype='multipart/form-data')
     .form-group
       label(for='dob')  Date of Purchase:
       input#dob(type='date' placeholder=' Date of Purchase' name='dob')
@@ -15,7 +15,7 @@ head
       input#itemName(type='text' name='itemName' )
     .form-group
       label(for='itemImage') Image :
-      input#itemImage(type='file' name='itemImage' accept='image/*' )
+      input#itemImage(type='file' name='itemImage'  )
     .form-group
       label(for='itemPrice') Price:
       input#itemPrice(type='number' name='itemPrice' )
